<resources>
    <string name="app_name">Mahi Mess</string>
    <string name="need_a_new_account">Need a new account</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="logout">Logout</string>

    <string name="login">Login</string>

    <array name="locations">
        <item>Select location</item>
        <item>Ambegao(BK)</item>
        <item>Balaji Nagar</item>
        <item>Shivaji Nagar</item>
        <item>Vadgao</item>
        <item>Warje</item>

    </array>


    <string name="welcome_to_mahi_mess">Welcome to Mahi Mess</string>

    <string name="students">Students</string>
    <string name="mess_owner">Mess Owner</string>
    <string name="mess_owner_login">Mess Owner Login</string>
    <string name="bar">--------------------------------------------------------------------------------</string>
    <string name="bar1">--------------------------------------------------------------------------------</string>
    <string name="bar2">--------------------------------------------------------------------------------</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number">Mobile number</string>
    <string name="send_code">Send Code</string>
    <string name="resend_code">Resend code</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="verify">Verify</string>
    <string name="change_menu">Change Menu</string>
    <string name="created_by_balaji_davangave">~created by BALAJI DAVANGAVE</string>
    <string name="for_students">For Students :</string>
    <string name="for_mess">For Authorised Mess Owner :</string>
    <string name="mahi_mess">Mahi Mess</string>
    <string name="owner_and_developer_info">Owner and Developer Info :</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_mess0_maps">Map</string>

</resources>
