<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bmrd.mahimess.StartActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="195dp"
        android:layout_height="157dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/pics"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="47dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="       Mahi Mess"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/common_google_signin_btn_text_dark_default"
        android:textSize="45sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:background="@color/colorAccent"
        android:padding="6dp"
        android:text="@string/need_a_new_account"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="15sp" />

    <Button
        android:id="@+id/start_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_reg_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:padding="6dp"
        android:text="@string/login"
        android:textSize="15sp" />

    <Button
        android:id="@+id/start_loginm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:background="@color/colorPrimary"
        android:padding="6dp"
        android:text="@string/mess_owner_login"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/start_login_button"
        android:layout_below="@+id/textView"
        android:text="@string/created_by_balaji_davangave"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView7"
        android:layout_marginTop="21dp"
        android:layout_toStartOf="@+id/start_loginm_button"
        android:text="@string/for_students"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_loginm_button"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="18dp"
        android:text="@string/for_mess"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>
